<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <CheckBox
        android:id="@+id/hatCheckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="220dp"
        android:checked="false"
        android:clickable="false"
        android:onClick="mrPotato"
        android:text="@string/hat" />
    <CheckBox
        android:id="@+id/noseCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/hatCheckbox"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="104dp"
        android:checked="false"
        android:clickable="false"
        android:onClick="mrPotato"
        android:text="@string/nose" />
    <CheckBox
        android:id="@+id/eyesCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/noseCheckbox"
        android:checked="false"
        android:clickable="false"
        android:onClick="mrPotato"
        android:layout_marginTop="14dp"
        android:text="@string/eyes" />
    <CheckBox
        android:id="@+id/eyebrowsCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/noseCheckbox"
        android:checked="false"
        android:clickable="false"
        android:onClick="mrPotato"
        android:layout_alignTop="@+id/eyesCheckbox"
        android:text="@string/eyebrows" />
    <CheckBox
        android:id="@+id/glassesCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:clickable="false"
        android:onClick="mrPotato"
        android:layout_below="@+id/eyesCheckbox"
        android:layout_marginTop="15dp"
        android:text="@string/glasses" />
    <CheckBox
        android:id="@+id/earsCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/eyebrowsCheckbox"
        android:layout_alignTop="@+id/glassesCheckbox"
        android:checked="false"
        android:clickable="false"
        android:onClick="mrPotato"
        android:text="@string/ears"
        android:layout_alignStart="@+id/eyebrowsCheckbox" />
    <CheckBox
        android:id="@+id/mouthCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/glassesCheckbox"
        android:layout_marginTop="14dp"
        android:checked="false"
        android:clickable="false"
        android:onClick="mrPotato"
        android:text="@string/mouth" />
    <CheckBox
        android:id="@+id/mustacheCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/earsCheckbox"
        android:layout_alignTop="@+id/mouthCheckbox"
        android:checked="false"
        android:clickable="false"
        android:onClick="mrPotato"
        android:text="@string/mustache" />
    <CheckBox
        android:id="@+id/shoesCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/mouthCheckbox"
        android:layout_marginTop="15dp"
        android:checked="false"
        android:clickable="false"
        android:onClick="mrPotato"
        android:text="@string/shoes" />
    <CheckBox
        android:id="@+id/armsCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/mustacheCheckbox"
        android:layout_alignTop="@+id/shoesCheckBox"
        android:checked="false"
        android:clickable="false"
        android:onClick="mrPotato"
        android:text="@string/arms" />
    <ImageView
        android:id="@+id/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/body"
        android:layout_above="@+id/hatCheckbox"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/body" />
    <ImageView
        android:id="@+id/Hat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/hat"
        android:layout_above="@+id/hatCheckbox"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/hat"
        android:visibility="invisible"/>
    <ImageView
        android:id="@+id/arms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/arms"
        android:visibility="invisible"
        android:layout_above="@+id/hatCheckbox"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/arms"/>
    <ImageView
        android:id="@+id/ears"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ears"
        android:visibility="invisible"
        android:layout_above="@+id/hatCheckbox"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/ears"/>
    <ImageView
        android:id="@+id/eyes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/eyes"
        android:visibility="invisible"
        android:layout_above="@+id/hatCheckbox"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/eyes"/>
    <ImageView
        android:id="@+id/eyebrows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/eyebrows"
        android:contentDescription="@string/eyebrows"
        android:layout_above="@+id/hatCheckbox"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>
    <ImageView
        android:id="@+id/glasses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/glasses"
        app:srcCompat="@drawable/glasses"
        android:visibility="invisible"
        android:layout_above="@+id/hatCheckbox"
        android:layout_centerHorizontal="true" />
    <ImageView
        android:id="@+id/mouth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/mouth"
        app:srcCompat="@drawable/mouth"
        android:visibility="invisible"
        android:layout_above="@+id/hatCheckbox"
        android:layout_centerHorizontal="true" />
    <ImageView
        android:id="@+id/nose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/nose"
        android:visibility="invisible"
        android:contentDescription="@string/nose"
        android:layout_above="@+id/hatCheckbox"
        android:layout_centerHorizontal="true" />
    <ImageView
        android:id="@+id/mustache"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/mustache"
        app:srcCompat="@drawable/mustache"
        android:visibility="invisible"
        android:layout_above="@+id/hatCheckbox"
        android:layout_centerHorizontal="true" />
    <ImageView
        android:id="@+id/shoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/shoes"
        app:srcCompat="@drawable/shoes"
        android:visibility="invisible"
        android:layout_above="@+id/hatCheckbox"
        android:layout_centerHorizontal="true" />
</RelativeLayout>